fixed spacing and font size

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -163,7 +163,7 @@ p{
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 55px 0;
+  padding: 20px 0;
   overflow: hidden;
 }
 
